// ---------------------------------------------------
// phantom-lang
// https://github.com/notcl4y14/phantom-lang
// ---------------------------------------------------

// ---------------------------------------------------
// UNDER CONSTRUCTION VERSIONS
// ---------------------------------------------------

// 3/7/2024
- Added more token types
	+ Closure
	+ Symbol
	+ Int | Float
	+ String
	+ Keyword
	+ Literal
	+ Identifier
- Added more token values to the "Operator" token type
	+ "=", "<", ">"
-----------
- Initial release
- Created main.py
- Created "source" folder
	+ lexer.py
	+ token.py
- Added "Operator" token type