@@ -1,0 +1,6 @@
+let π = 3.14;
+let x = 10;
+let y = 4;
+let z = (x + y);
+
+let str = "PI is " + (string) π;
